--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 <body>
   <div class=header>
     <h1>私のホームページ</h1>
-    <div>〇〇〇〇のページです。</div>
+    <div>私のページです。</div>
   </div>
   <div class=main>
     <div>
       <h2>特徴・特技</h2>
       <div>
-        新しいものが好き、水泳
+        Minecraft、Valorantが好き、漫画を読むのが好き
       </div>
     </div>
 
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年05月21日
   </div>
 </body>
 </html>
