--- a/rep01.html
+++ b/rep01.html
@@ -23,7 +23,7 @@
 <body>
   <div class=header>
     <h1>1週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>〇〇班〇〇番 ニックネーム</div>
+    <div>3a班6番 ドリンクバー全部混ぜ男</div>
   </div>
   <div class=1week>
     <h2>第1週目</h2>
@@ -32,8 +32,10 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        　scratchを使用して、基本的なプログラミングを学んだ。<br>
+        上からランダムな場所からランダムな速度で落ちてくるリンゴを<br>
+        キャッチする簡単なゲームを作った。変数を用いてリンゴをキャッチすると<br>
+        スコアが増えるようにした。<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
