--- a/rep01.html
+++ b/rep01.html
@@ -33,9 +33,8 @@
       <div>
         1.内容<br>
         　scratchを使用して、基本的なプログラミングを学んだ。<br>
-        上からランダムな場所からランダムな速度で落ちてくるリンゴを<br>
-        キャッチする簡単なゲームを作った。変数を用いてリンゴをキャッチすると<br>
-        スコアが増えるようにした。<br>
+        上からランダムな場所からランダムな速度で落ちてくるリンゴをキャッチする簡単なゲームを作った。
+        変数を用いてリンゴをキャッチするとスコアが増えるようにした。<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
