--- a/rep03.html
+++ b/rep03.html
@@ -69,13 +69,12 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/rep01.html">1週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep02.html">2週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/rep03.html">3週目のレポート</a><br>
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://uhcmain.github.io/web/rep01.html">1週目のレポート</a><br>
+        <a href="https://uhcmain.github.io/web/rep02.html">2週目のレポート</a><br>
+        <a href="https://uhcmain.github.io/web/rep03.html">3週目のレポート</a><br>
+        <a href="https://uhcmain.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
-
   <div class=footer>
     作成日：20yy年mm月dd日
   </div>
