--- a/rep02.html
+++ b/rep02.html
@@ -32,7 +32,7 @@
         1.内容<br>
         今日の実習では、まず人工知能と機械学習について学びました。AI研究の第一人者である松尾豊教授の動画を用いた説明で、<br>
         ディープラーニングについてもよく理解することができました。次に、Teachable Machineというツールを用いて、グー、チョキ、パーを学習させ判別できるようにしました。<br>
-        そのあとはRobloxとworkroomsを用いてVR体験をしました。どれもめったに体験することのないことなのでので、新鮮な気持ちで楽しむことができました。<br>
+        そのあとはRobloxとworkroomsを用いてVR体験をしました。<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
