--- a/rep03.html
+++ b/rep03.html
@@ -69,9 +69,9 @@
       <h3>各ページへのリンク</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://uhcmain.github.io/web/rep01">1週目のレポート</a><br>
-        <a href="https://uhcmain.github.io/web/rep02">2週目のレポート</a><br>
-        <a href="https://uhcmain.github.io/web/rep03">3週目のレポート</a><br>
+        <a href="https://uhcmain.github.io/website/rep01">1週目のレポート</a><br>
+        <a href="https://uhcmain.github.io/website/rep02">2週目のレポート</a><br>
+        <a href="https://uhcmain.github.io/website/rep03">3週目のレポート</a><br>
         <a href="https://uhcmain.github.io/web/">私のホームページ</a><br>
       </div>
     </div>
