--- a/rep01.html
+++ b/rep01.html
@@ -32,12 +32,11 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        　scratchを使用して、基本的なプログラミングを学んだ。<br>
-        上からランダムな場所からランダムな速度で落ちてくるリンゴをキャッチする簡単なゲームを作った。
-        変数を用いてリンゴをキャッチするとスコアが増えるようにした。<br>
+        　scratchを使用して、基本的なプログラミングを学んだ<br>
+        scratchのペン機能を利用して、様々な模様を描いた。<br>
+        scratchの猫が動いた跡がペンで描かれるので、
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        
       </div>
     </div>
 
@@ -47,7 +46,9 @@
       <div>
         1.内容<br>
         学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          scratchを使用して、基本的なプログラミングを学んだ。<br>
+        上からランダムな場所からランダムな速度で落ちてくるリンゴをキャッチする簡単なゲームを作った。
+        変数を用いてリンゴをキャッチするとスコアが増えるようにした。<br>
         2.感想<br>
         学習した内容を実践したときに自分が感じた感想を<br>
         自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
