--- a/rep01.html
+++ b/rep01.html
@@ -32,11 +32,13 @@
       <img src="art.png" alt="ラインアートの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        　scratchを使用して、基本的なプログラミングを学んだ<br>
+        　scratchを使用して、基本的なプログラミングを学んだ。<br>
         scratchのペン機能を利用して、様々な模様を描いた。<br>
-        scratchの猫が動いた跡がペンで描かれるので、
+        scratchの猫が動いた跡がペンで描かれるので、いろんな動きを試して様々な模様を描いた。<br>
         2.感想<br>
-        
+        　久しぶりにscratchを使用してプログラミングをすることで、前にやっていたことも<br>
+        思い出しながら実習に取り組むことができました。こういう模様にするにはどうすればいいかと<br>
+        考えながら作業することは楽しかったです。<br>
       </div>
     </div>
 
@@ -50,8 +52,7 @@
         上からランダムな場所からランダムな速度で落ちてくるリンゴをキャッチする簡単なゲームを作った。
         変数を用いてリンゴをキャッチするとスコアが増えるようにした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          
       </div>
     </div>
 
@@ -59,13 +60,14 @@
       <h3>1-3 ホームページ作成</h3>
       <div>
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
-        <a href="https://yourID.github.io/web/">私のホームページ</a><br>
+        <a href="https://uhcmain.github.io/website/">私のホームページ</a><br>
         1.内容<br>
         学習した内容を説明する文章を<br>
         自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          このゲームを作るときは、りんごと猫のキャラクターとで別のプログラミングを作り、<br>
+        それを分けたことです。そうすることでどのプログラムがりんごのものなのか、<br>
+        猫のものなのかがとてもわかりやすくなりました。<br>
       </div>
     </div>
 
@@ -76,12 +78,12 @@
         <a href="https://uhcmain.github.io/website/rep01">1週目のレポート</a><br>
         <a href="https://uhcmain.github.io/website/rep02">2週目のレポート</a><br>
         <a href="https://uhcmain.github.io/website/rep03">3週目のレポート</a><br>
-        <a href="https://uhcmain.github.io/web/">私のホームページ</a><br>
+        <a href="https://uhcmain.github.io/website/">私のホームページ</a><br>
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年6月18日
   </div>
 </body>
 </html>
