--- a/rep02.html
+++ b/rep02.html
@@ -22,7 +22,7 @@
 <body>
   <div class=header>
     <h1>2週目のレポート ： 公大高専１年実習I-1</h1>
-    <div>○○班○○番 ニックネーム</div>
+    <div>3a班6番 ドリンクバー全部混ぜ男</div>
   </div>
   <div class=2week>
     <h2>第2週目</h2>
@@ -30,13 +30,9 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        今日の実習では、まず人工知能と機械学習について学びました。AI研究の第一人者である松尾豊教授の動画を用いた説明で、<br>
-        ディープラーニングについてもよく理解することができました。次に、Teachable Machineというツールを用いて、グー、チョキ、パーを学習させ判別できるようにしました。<br>
-        そのあとはRobloxとworkroomsを用いてVR体験をしました。<br>
+          今書いているレポートを完成させました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
-        3. 2週目が完成した人は1週目のレポートも完成させる<br>
+          HTMLはほとんど使ったことがなかったのですが、先生の指示道理に進めてなんとかできました。<br>
       </div>
     </div>
 
@@ -45,11 +41,12 @@
       <img src="ml.png" alt="TeachableMachineの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          今日の実習では、まず人工知能と機械学習について学びました。AI研究の第一人者である松尾豊教授の動画を用いた説明で、<br>
+        ディープラーニングについてもよく理解することができました。次に、Teachable Machineというツールを用いて、グー、チョキ、パーを学習させ判別できるようにしました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          松尾豊教授の動画ではとても詳しく書かれており、理解が深まりました。<br>
+        つぎにTeachable Machineでぐー、ちょき、パーを認識できるようにし、<br>
+        それぞれにキャラクターに動作させるようプログラムしました。<br>
       </div>
     </div>
 
@@ -58,11 +55,11 @@
       <img src="wroom.png" alt="metaWRの画像" width="50%" height="50%"> <img src="roblox.png" alt="ロブロックスの画像" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          VRゴーグルを使って実際にバーチャル空間に入りました。<br>
+        高専を再現したものと会議室のようなものがありました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          僕は今までVRゴーグルを使ったことがなかったので、とても貴重な体験になりました。<br>
+        自分が実際にバーチャル空間に入ることは新鮮で、忘れられない体験になると思いました。<br>
       </div>
     </div>
 
@@ -73,12 +70,12 @@
         <a href="https://uhcmain.github.io/website/rep01">1週目のレポート</a><br>
         <a href="https://uhcmain.github.io/website/rep02">2週目のレポート</a><br>
         <a href="https://uhcmain.github.io/website/rep03">3週目のレポート</a><br>
-        <a href="https://uhcmain.github.io/web/">私のホームページ</a><br>
+        <a href="https://uhcmain.github.io/website/">私のホームページ</a><br>
       </div>
     </div>
   </div>
   <div class=footer>
-    作成日：20yy年mm月dd日
+    作成日：2025年06月4日
   </div>
 </body>
 </html>
