--- a/rep03.html
+++ b/rep03.html
@@ -31,11 +31,11 @@
       <a href="https://yourID.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          今日の実習ではまず、webプログラミング道場という環境で3Dのものを作りました。<br>
+        これを実際にVRゴーグルで見ました。
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          今まで3Dのものを作成したことはなかったので、<br>
+        自分で考えながら配置するのはとても楽しかったです。<br>
       </div>
     </div>
     <div>
@@ -44,11 +44,10 @@
       <a href="https://yourID.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          webプログラミング道場という環境でHTMLとjavascriptを使って<br>
+        伝言板を作成しました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          HTMLは殆ど使ったことがなかったのでwebプログラミングを体験できてとても楽しかったです。<br>
       </div>
     </div>
 
