--- a/rep03.html
+++ b/rep03.html
@@ -56,11 +56,10 @@
       <img src="interactive.png" alt="VRゲームの画像" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          VRゴーグルでjavascriptを使って作られたバーチャル空間を体験しました。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+          VR空間で操作しながら実際にボールを飛ばしたり、ものを動かしたりできて<br>
+        とても楽しかったです。<br>
       </div>
     </div>
 
@@ -71,7 +70,7 @@
         <a href="https://uhcmain.github.io/website/rep01">1週目のレポート</a><br>
         <a href="https://uhcmain.github.io/website/rep02">2週目のレポート</a><br>
         <a href="https://uhcmain.github.io/website/rep03">3週目のレポート</a><br>
-        <a href="https://uhcmain.github.io/web/">私のホームページ</a><br>
+        <a href="https://uhcmain.github.io/website/">私のホームページ</a><br>
       </div>
     </div>
   <div class=footer>
